--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
     </div>
 
     <div id="donateheader" class="donatewidget"><input class="paymentamount" type="text"
-            placeholder="Amount to donate (£)"><input class="paymentbutton" id="paypalbutton" type="button"
-            value="PayPal"><input class="paymentbutton" type="button" id="mastercardbutton" value="MasterCard"><input
-            class="paymentbutton" type="button" id="visabutton" value="Visa"><input class="paymentbutton" type="button"
-            id="applebutton" value="Apple Pay"></div>
-
+            placeholder="Amount to donate (£)"><a href="https://paypal.com"><img class="paymentbutton2" src="images/paypallogo.png"></a><a href="https://www.mastercard.co.uk"><img class="paymentbutton2" src="images/mastercardbutton.png"></a><a href="https://visa.com"><img class="paymentbutton2" src="images/visabutton.png"></a><a href="https://www.apple.com/uk/apple-pay/"><img class="paymentbutton2" src="images/applepaylogo.png"></a></div>
+    
     </div>
+
+
+    <!-- <input class="paymentbutton" id="paypalbutton" type="button"
+            value="PayPal1"><input class="paymentbutton" type="button" id="mastercardbutton" value="MasterCard"><input
+            class="paymentbutton" type="button" id="visabutton" value="Visa"><input class="paymentbutton" type="button"
+            id="applebutton" value="Apple Pay"> -->
 
     <div id="paragraph1" class="row paragraph">
         <div class="">
